terraform/security_groups.tf
resource "aws_security_group" "instance_sg" {
  name        = "gitops-node-sg"
  description = "Allow inbound SSH, frontend web UI, and backend API traffic"
  vpc_id      = aws_vpc.gitops_vpc.id

  # Administrative SSH access
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] 
  }

  # Frontend Dashboard Port Mapping
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Backend API Port Mapping
  ingress {
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Outbound Rule: Let the server download system packages and images from the web
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "gitops-node-security-group"
  }
}
